Added handlebars and implemented SQLize and backend

--- a/index.html
+++ b/index.html
@@ -11,15 +11,9 @@
 <body>
     <nav>
         <h2>Cryptids</h2>
+        <a href="/faq">FAQ</a>
         <a href="/top">Top Cryptids</a>
-        <select name="types">
-            <option value="aquatic">Aquatic</option>
-            <option value="aviary">Aviary</option>
-            <option value="bipedal">Bipedal</option>
-            <option value="humanoid">Humanoid</option>
-            <option value="underground">Underground</option>
-            <option value="insectoid">Insectoid</option>
-        </select>
+  
         <a href="/database">Database</a>
     </nav>
 
@@ -48,7 +42,7 @@
                         <p>--V--------</p>
                         <p>dangerous</p>
                     </span>
-                    <img id = "cryptid" src="./assets/guman.jpg" alt="guman">
+                    <img id = "cryptid" src="./assets/images/guman.jpg" alt="guman">
                     <span class = "icons">
                         <p>h</p>
                         <p>goo</p>
@@ -61,6 +55,6 @@
     </main>
 
     <footer>Copyright 2021</footer>
-
+    <script src = "./assets/logic.js"></script>
 </body>
 </html>
